--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
-VITE_SITE_NAME=https://neuro-tools-25.github.io/
-VITE_BASE_URL=/vue-labeling-image/
+VITE_SITE_NAME=https://neuro-tools-25.github.io
+VITE_SITE_BASE=vue-labeling-image
