--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "vue-labeling-image",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "type": "module",
   "main": "lib/index.es.js",
+  "homepage": "https://neuro-tools-25.github.io/vue-labeling-image/",
   "description": "Vue component for labeling data in images",
   "scripts": {
     "dev": "vite",
