--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-labeling-image",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "type": "module",
   "main": "lib/index.es.js",
   "homepage": "https://neuro-tools-25.github.io/vue-labeling-image/",
@@ -19,7 +19,9 @@
     "vite": "^7.0.0",
     "vite-plugin-vue-devtools": "^7.7.7",
     "vue": "^3.5.17",
-    "vue-router": "^4.5.1"
+    "vue-code-markup": "^0.4.0",
+    "vue-router": "^4.5.1",
+    "work-with-net": "^0.4.0"
   },
   "keywords": [
     "vue labeling image",
@@ -65,9 +67,5 @@
   "volta": {
     "node": "22.20.0",
     "npm": "11.6.1"
-  },
-  "dependencies": {
-    "vue-code-markup": "^0.4.0",
-    "work-with-net": "^0.4.0"
   }
 }
